--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/chart.js/dist/chart.js"
+            ]
           }
         }
       }
