--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/chart.js/dist/chart.js"
+              "node_modules/chart.js/dist/chart.js",
+              "node_modules/chart.js/dist/Chart.min.js"
             ]
           }
         }
